Fixed incorrect 'row-gap' value

--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -66,7 +66,7 @@ canvas {
 	grid-template-columns: min-content min-content 1fr max-content;
 	grid-template-rows: min-content min-content 1fr min-content;
 	column-gap: 1em;
-	row-gap: 0.25em 5em;
+	row-gap: 0.25em;
 
 	inset: 0.5em;
 	pointer-events: none;
